[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "Colorize JSON strings"
documentation = "https://docs.rs/json-color"
homepage = "https://github.com/saghm/json-color.git"
keywords = ["json", "color", "colorize", "colored"]
license = "MIT"
name = "json-color"
repository = "https://github.com/saghm/json-color.git"
version = "0.5.0"

[dependencies]
colored = "1.5.1"
serde = "1.0.6"
serde_json = "1.0.2"
