[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "Colorize JSON strings"
documentation = "https://docs.rs/json-color"
homepage = "https://github.com/saghm/json-color.git"
keywords = ["json", "color", "colorize", "colored"]
license = "MIT"
name = "json-color"
readme = "README.md"
repository = "https://github.com/saghm/json-color.git"
version = "0.7.0"

[dependencies]
colored = "1.6.0"
serde = "1.0.27"
serde_json = { version = "1.0.9", features = ["preserve_order"] }
